--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome | NodeJS Project</title>
     <style>
+        .main-section{
+            background-color: #5b6281;
+        }
         .hero-block {
             background-color: #F2F2F2;
             border: 1px solid #222;
@@ -24,12 +27,15 @@
     </style>
 </head>
 <body>
+    <div class="main-section">
     <div class="hero-block">
         <h1>Welcome, NodeJS</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores numquam cumque exercitationem fugit, doloremque repellendus temporibus nesciunt nostrum dolorem in!</p>
         <hr/><br/><br/>
         <a href="/login" title="Login Now" class="button">Login Now</a>
+        
     </div>
+</div>
 
     <!-- emmet example: div>div>div^span -->
 </body>
