--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -8,21 +8,28 @@
   </head>
   <body>
     <div class="container mt-5" style="max-width: 480px;">
-        <h1 class="display-5">Login User</h1>
+        <h1 class="display-5">Register User</h1>
         <br/>
-        <div class="login-section">
-          <div class="row">
+        <div class="row">
             <div class="col col-12">
                 <form>
+                    <div class="form-outline mb-4">
+                        <input type="text" id="firstname" class="form-control" />
+                        <label class="form-label" for="form2Example1">First Name</label>
+                      </div>
+                      <div class="form-outline mb-4">
+                        <input type="text" id="lastname" class="form-control" />
+                        <label class="form-label" for="form2Example1">Last Name</label>
+                      </div>
                     <!-- Email input -->
                     <div class="form-outline mb-4">
-                      <input type="email" id="form2Example1" class="form-control" />
+                      <input type="email" id="email" class="form-control" />
                       <label class="form-label" for="form2Example1">Email address</label>
                     </div>
                   
                     <!-- Password input -->
                     <div class="form-outline mb-4">
-                      <input type="password" id="form2Example2" class="form-control" />
+                      <input type="password" id="password" class="form-control" />
                       <label class="form-label" for="form2Example2">Password</label>
                     </div>
                   
@@ -30,29 +37,18 @@
                     <div class="row mb-4">
                       <div class="col d-flex justify-content-center">
                         <!-- Checkbox -->
-                        <div class="form-check">
-                          <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-                          <label class="form-check-label" for="form2Example31"> Remember me </label>
-                        </div>
+                        
                       </div>
                   
-                      <div class="col">
-                        <!-- Simple link -->
-                        <a href="">Forgot password?</a>
-                      </div>
+                     
                     </div>
                   
                     <!-- Submit button -->
                     <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
                   
-                    <!-- Register buttons -->
-                    <div class="text-center">
-                      <p>Not a member? <a href="/register">Register</a></p>
-                
-                    </div>
+                   
                   </form>
             </div>
-        </div>
         </div>
     </div>
 
